--- a/pass-detail.html
+++ b/pass-detail.html
@@ -316,7 +316,7 @@
 
     <script src="config.js"></script>
     <script>
-      let API_URL = "http://localhost:3000/api/transit-pass";
+      let API_URL = "https://road-pass.onrender.com/api/transit-pass";
 
       // Load API URL from config
       async function initializeAPI() {
