--- a/transit-pass.html
+++ b/transit-pass.html
@@ -392,7 +392,7 @@
       <br />
       <button id="printBtn">Print / Download PDF</button>
       <script>
-        const API_URL = "http://localhost:3000/api/transit-pass";
+        const API_URL = "https://road-pass.onrender.com/api/transit-pass";
 
         function fmt(dt) {
           if (!dt) return "";
