--- a/input.html
+++ b/input.html
@@ -381,7 +381,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="config.js"></script>
     <script>
-      let API_URL = "http://localhost:3000/api/transit-pass";
+      let API_URL = "https://road-pass.onrender.com/api/transit-pass";
 
       // Load API URL from config
       async function initializeAPI() {
