--- a/transit-pass.html
+++ b/transit-pass.html
@@ -394,6 +394,7 @@
       <script>
         const API_URL = "https://road-pass.onrender.com/api/transit-pass";
 
+        // Format date-time in "DD MMM YYYY hh:mm:ss AM/PM" format Indian Timezone
         function fmt(dt) {
           if (!dt) return "";
           const d = new Date(dt);
