--- a/pass-detail.html
+++ b/pass-detail.html
@@ -335,14 +335,23 @@
       // Format date to readable format
       function formatDate(isoString) {
         if (!isoString) return "N/A";
-        const date = new Date(isoString);
-        const day = String(date.getDate()).padStart(2, "0");
-        const month = date.toLocaleString("en-US", { month: "short" });
-        const year = date.getFullYear();
-        const hours = String(date.getHours()).padStart(2, "0");
-        const minutes = String(date.getMinutes()).padStart(2, "0");
-        const seconds = String(date.getSeconds()).padStart(2, "0");
-        return `${day}-${month}-${year} ${hours}:${minutes}:${seconds}`;
+        const d = new Date(isoString);
+        return (
+          d.toLocaleDateString("en-GB", {
+            day: "2-digit",
+            month: "short",
+            year: "numeric",
+            timeZone: 'UTC'
+          }) +
+          " " +
+          d.toLocaleTimeString("en-GB", {
+            hour: "2-digit",
+            minute: "2-digit",
+            second: "2-digit",
+            hour12: false,
+            timeZone: 'UTC'
+          })
+        );
       }
 
       // Get pass status
