--- a/transit-pass.html
+++ b/transit-pass.html
@@ -399,17 +399,19 @@
           if (!dt) return "";
           const d = new Date(dt);
           return (
-            d.toLocaleDateString("en-GB", {
-              day: "2-digit",
-              month: "short",
-              year: "numeric",
-            }) +
+                      d.toLocaleDateString("en-GB", {
+                        day: "2-digit",
+                        month: "short",
+                        year: "numeric",
+                        timeZone: 'UTC'
+                      }) +
             " " +
             d.toLocaleTimeString("en-GB", {
               hour: "2-digit",
               minute: "2-digit",
               second: "2-digit",
-              hour12: true,
+              hour12: false,
+              timeZone: 'UTC'
             })
           );
         }
