update date fix

--- a/admin.html
+++ b/admin.html
@@ -612,7 +612,7 @@
               <td>${pass.licensee || "-"}</td>
               <td>${pass.mineral || "-"}</td>
               <td>${pass.destination || "-"}</td>
-              <td>${pass.route || "-"}</td>
+              <td style="word-break: break-word;">${pass.route || "-"}</td>
               <td>${pass.quantity || "-"}</td>
               <td>${pass.vehicle || "-"}</td>
               <td>${pass.grossWeight || "-"}</td>
