update date fix

--- a/transit-pass.html
+++ b/transit-pass.html
@@ -308,7 +308,7 @@
               <div class="q">7. Permit No.</div>
               <div class="a short" id="pm2"></div>
               <div class="q">Date</div>
-              <div class="a short" id="pd2"></div>
+              <div class="a tuned" id="pd2"></div>
             </div>
 
             <div class="row">
