--- a/pass-detail.html
+++ b/pass-detail.html
@@ -337,18 +337,18 @@
         if (!isoString) return "N/A";
         const d = new Date(isoString);
         return (
-          d.toLocaleDateString("en-GB", {
+          d.toLocaleDateString("en-US", {
             day: "2-digit",
             month: "short",
             year: "numeric",
             timeZone: 'UTC'
           }) +
           " " +
-          d.toLocaleTimeString("en-GB", {
+          d.toLocaleTimeString("en-US", {
             hour: "2-digit",
             minute: "2-digit",
             second: "2-digit",
-            hour12: false,
+            hour12: true,
             timeZone: 'UTC'
           })
         );
