--- a/transit-pass.html
+++ b/transit-pass.html
@@ -394,6 +394,17 @@
       <script>
         const API_URL = "https://road-pass.onrender.com/api/transit-pass";
 
+        function fmtDate(dt) {
+          if (!dt) return "";
+          const d = new Date(dt);
+          return d.toLocaleDateString("en-US", {
+            day: "2-digit",
+            month: "short",
+            year: "numeric",
+            timeZone: "UTC",
+          });
+        }
+
         // Format date-time in "DD MMM YYYY hh:mm:ss AM/PM" format Indian Timezone
         function fmt(dt) {
           if (!dt) return "";
@@ -449,7 +460,7 @@
                 route: pass.route || "",
                 mineral: pass.mineral || "SAND",
                 permit: pass.permitNo || "",
-                pdate: pass.permitDate ? fmt(pass.permitDate) : "",
+                pdate: pass.permitDate ? fmtDate(pass.permitDate) : "",
                 qty: pass.quantity || "",
                 veh: pass.vehicle || "",
                 len: pass.length || "",
